Add security awareness, hardening, and web fundamentals documentation for Java
- Introduced java_security_awareness.txt covering basic security principles and practices.
- Added java_security_hardening.txt detailing advanced security hardening techniques and threat modeling.
- Created java_virtual_threads.txt explaining the use and benefits of virtual threads in Java 21+.
- Added java_web_frameworks.txt with insights on Spring MVC, Spring Boot, and reactive programming.
- Introduced java_web_fundamentals.txt covering HTTP methods, servlets, REST principles, and JSON processing.
- Added java_web_security.txt detailing OWASP Top 10, injection prevention, and session security best practices.